chore: rename PENDING -> TODO
